# cxxmp

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Config.cmake  GetSysInfo.cmake  Git.cmake  Logging.cmake  Versions.cmake
cmake/template/: config.h.in
include/: config.h
include/cxxmp/: config.h
include/cxxmp/Common/: log.h  macro.h  timer.h  typing.h
include/cxxmp/Core/: global.h  local.h  lru.h  queueObserver.h  scheduler.h  task.h  taskQueue.h
include/cxxmp/Utily/: getsys.h
script/: build.sh
src/: CMakeLists.txt
src/cxxmp/Common/: log.cc
src/cxxmp/Core/: local.cc  scheduler.cc  task.cc  taskQueue.cc
src/cxxmp/Utily/: getsys.cc
tests/: CMakeLists.txt  test.cc
tests/include/test/: localTaskQueue.h  scheduler.h
